Update 3_텍스트 관련 속성.html

--- a/KH_Front/css/day01/3_텍스트 관련 속성.html
+++ b/KH_Front/css/day01/3_텍스트 관련 속성.html
@@ -37,7 +37,21 @@
         - 색상 표현 방법
             1. 지정된 이름: red, blue 등 100개가 넘는 이름이 지정되어 있음. 
             2. 16진수로 표현: #ffffff, #123456 등 (12는 red, 34는 blue, 56은 green의 16진수이다.)
+            3. rgb()함수를 이용
+          - rgb(255, 0, 0);
+            4. rgba(red, blue, green, 투명도)
+          - 투명은 0, 불투명은 1, 투명도는 0~1사이의 실수를 사용
+            5. hsl()함수를 이용
+          - 색상, 명도, 채도를 이용
+            6. hala()함수를 이용
+          - hsl에 투명도 추가
             */
+            a{
+            color: #f00;
+            color: rgb(255, 0, 0);
+            color: rgba(255,0,0,1);
+            color: red;
+        }
     </style>
 </head>
 <body>
