--- a/KH_Front/css/day01/1_선택자.html
+++ b/KH_Front/css/day01/1_선택자.html
@@ -50,7 +50,7 @@
 
         /* 반응 선택자
         - :active: 클릭한 요소
-        - hover: 마우스가 올려진 요소 */
+        - :hover: 마우스가 올려진 요소 */
             a:active{color:blue;}
             /* a:hover{color:aqua;} */
 
