--- a/KH_Front/css/day03/6_background 관련 속성.html
+++ b/KH_Front/css/day03/6_background 관련 속성.html
@@ -26,8 +26,8 @@
 
             /* background-image : 배경 이미지 설정
                 - 선택자{background-image: url(경로)} */
-            /* background-image: url(http://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg); */
-            background-color: yellow;
+            background-image: url(http://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg);
+            /* background-color: yellow; */
 
             /* background-repeat : 배경 이미지 반복 출력 설정
                 - repeat 브라우저에 가득 찰 때 까지 가로/세로 반복
