--- a/KH_Front/css/day01/3_텍스트 관련 속성.html
+++ b/KH_Front/css/day01/3_텍스트 관련 속성.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- 
+    1. font-family / 대체 폰트 설정
+    2. font-style
+    3. font-size
+    4. font-weight / bold의 값은?
+    5. font-varient / small-caps
+    6. font
+
+    7. font-height !!!
+
+    8. color / 글자색 지정 방법(6가지)
+   -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>텍스트 관련 속성</title>
