--- a/KH_Front/css/day02/16_포지션 예제2.html
+++ b/KH_Front/css/day02/16_포지션 예제2.html
@@ -16,6 +16,8 @@
     position:absolute;
     top: 50%; margin-top: -152px;    /* 기준이 되는 요소의 높이를 기준으로 50%가 되는 지점부터 배치함 */
     left: 50%; margin-left: -204px;}
+    /* margin 속성을 부모 요소의 절반의 -가 되는 만큼으로 설정해, 자식 요소의 크기 인식을 변경함.
+        (사실상 자식 요소의 크기 인식은 margin 설정을 삭제했을 때 표시되는 위치로 인식되고 있음.) */
     </style>
 </head>
 <body>
