--- a/KH_Front/css/day02/2_텍스트 그림자.html
+++ b/KH_Front/css/day02/2_텍스트 그림자.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>텍스트 그림자</title>
     <style>
+        /* 
+        text-shadow: 글자에 그림자 설정하기
+        - x값, y값, 퍼짐정도, 색상
+        - 한 글자에 여러개 설정 가능함.
+        */
         [class^=shadow]{font-weight: bold; font-size: 30px;}
         .shadow1{text-shadow: 3px 0px 0px red;}
         .shadow2{text-shadow: 0px 3px 0px red;}
