--- a/KH_Front/css/day02/4_글자 간격 속성.html
+++ b/KH_Front/css/day02/4_글자 간격 속성.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>글자 간격 속성</title>
     <style>
+        /* 
+        letter-spacing: 각 글자의 간격 조절
+        word-spacing: 각 단어간의 간격 조절(공백 조절)
+        */
         [class^=box]{font-size: 20px;}
-        .box2{letter-spacing: -.5px;}
-        .box3{word-spacing: 2px;}
+        .box2{letter-spacing: -3px;}
+        .box3{word-spacing: 10px;}
     </style>
 </head>
-<body>+            
+<body>            
     <div class="box2">안녕하세요. 만나서 반갑습니다.</div>
     <div class="box1">안녕하세요. 만나서 반갑습니다.</div>
     <div class="box3">안녕하세요. 만나서 반갑습니다.</div>
