--- a/KH_Front/css/day02/6_말줄임.html
+++ b/KH_Front/css/day02/6_말줄임.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        text-overflow 관련 속성 추가 설명
+
+        -webkit-line-clamp !!
+        (display는 9번 예제에서 확인)
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>말 줄임</title>
