--- a/KH_Front/css/day02/7_목록 관련 속성.html
+++ b/KH_Front/css/day02/7_목록 관련 속성.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>목록 관련 속성</title>
     <style>
-        /*  list-style-type: 마커 모양을 지정함
-            list-style-image: 마커 모양을 이미지로 대체
-            list-style-position: 마커의 위치를 지정함
-            list-style: type, position, image 속성을 한 번에 적용*/
+        /*  
+        list-style-type: 마커 모양을 지정함 (li 태그의 type 속성 변경과 유사함) / url 설정
+        list-style-image: 마커 모양을 이미지로 대체
+        list-style-position: 마커의 위치를 지정함
+        list-style: type, position, image 속성을 한 번에 적용
+        */
+
         ul, ol{background-color: yellow; margin-top: 10px;}
         li{background-color: gray;}
         .list1{list-style-type: circle;}
