--- a/KH_Front/css/day02/9_display.html
+++ b/KH_Front/css/day02/9_display.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        display 태그
+        (각 요소의 종류를 바꿀 수 있음(block, inline, inline-block))
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>display</title>
