--- a/KH_Front/html/day01/2_글자 관련 태그.html
+++ b/KH_Front/html/day01/2_글자 관련 태그.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. 제목 태그
+        2. 줄바꿈 태그 !
+        3. 공백 문자 !!
+        4. 가로선 태그 !
+        5. 형광펜 효과
+        6. 굵은 글씨 태그 (2개)
+        7. small 태그
+        8. em 태그, i 태그 !
+        9. 밑줄, 취소선 태그
+        10. 인용 태그 (2개)
+        11. 첨자 태그 (2개)
+        12. pre 태그 !!!, 코드 태그
+        13. abbr 태그
+        14. 웹사이트 태그
+        15. 키보드 키 태그
+        16. 문단 설정 태그
+      
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -61,7 +80,7 @@
 
     <!--
         bockquote 태그: 인용 태그 (여백을 주어서 표시)
-        q태긔 인용태그 (""로 표시)
+        q태그 인용태그 (""로 표시)
 
         sup태그: 윗첨자 (제곱 표시)
         sub: 아래첨자
