--- a/KH_Front/html/day01/6_멀티미디어 관련 태그.html
+++ b/KH_Front/html/day01/6_멀티미디어 관련 태그.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. 이미지 태그 / src, alt
+        2. 오디오 태그 / controls, autoplay, loop, preload(3가지)
+        3. map 태그 / usemap + area 태그 (4가지 속성)
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>멀티미디어 관련 태그</title>
