--- a/KH_Front/css/day02/11_예제1.html
+++ b/KH_Front/css/day02/11_예제1.html
@@ -14,7 +14,10 @@
 <body>
     <!--100px 크기를 가지는 정사각형 박스를 만들고, 안에 숫자 1을 넣기 테두리는 1px solid black
         1이 사각형 가운데 오도록 수정
-        사각형이 화면 좌우 가운데로 오도록 배치-->
+        사각형이 화면 좌우 가운데로 오도록 배치
+
+        (예제 다시 작성해보기)
+    -->
     <div class="box1">1</div>
     <!-- <span>1</span> inline 요소라서 text-align 속성의 영향을 받음-->
 </body>
