--- a/KH_Front/css/day02/14_포지셔닝.html
+++ b/KH_Front/css/day02/14_포지셔닝.html
@@ -8,7 +8,7 @@
         /* position: 요소를 배치하는 방식을 지정하는 속성
         - static(기본값)
 
-        - relative: 요소의 상대적인 위치를 계산해서 배치함. (positon: absolute의 기준점이 될 수)
+        - relative: 요소의 상대적인 위치를 계산해서 배치함. (positon: absolute의 기준점이 될 수 있음)
             (top, left, right, bottom을 이용해 기준 위치에서 지정한만큼 움직인 위치에 요소를 배치함.)
 
         - absolute: 기준 요소를 기준으로 위치를 조절함. 
@@ -18,7 +18,7 @@
             (편하기는 하지만 무분별한 사용은 자제할 것.)
             (다른 요소에 영향을 주지 않으면서 원하는 위치에 배치할 때 사용.)
             (사용 시, 너비와 높이를 지정하거나, 
-            top bottom을 이용하여 높이를 대신하거나, left right를 용하여 너비 대신 사용해야한다.)
+            top bottom을 이용하여 높이를 대신하거나, left right를 이용하여 너비 대신 사용해야한다.)
             (absolute인 요소는 부모 요소의 높이에 영향을 주지 않는다.)
 
 
@@ -43,20 +43,22 @@
         .absolute div{padding: 30px; border: 1px solid black; }
         .absolute .box1{position:relative} /* 기준점이 달라짐*/
         .absolute .content-box{height: 300px;
-            position: absolute; top: 0; left: 0;}
-        .absolute .box1 .inner-box{position: relative;}
+            position: absolute; top: 0; left: 0;} /* 조상 요소 중 relative 속성을 가진 요소인 box1의 위치를 기준으로, top 0 left 0 위치에 배치됨*/
+        /* .absolute .box1 .inner-box{position: relative;}  */
+        /* 기준점이 또 다시 달라짐. 위 라인을 주석처리 하면 선조 요소인 box1을 기준으로 content-box가 배치됨 */
+        /* box2에 있는 content-box는 선조 요소 중 relative 속성을 가진 요소가 없으므로, 브라우저를 기준으로 해당 요소가 배치됨 */
 
         .fixed{position: fixed; bottom: 0;}
     </style>
 </head>
 <body>
-    <div class="relative">
+    <!-- <div class="relative">
         <div class="box1">H</div>
         <div class="box2">E</div>
         <div class="box3">L</div>
         <div class="box4">L</div>
         <div class="box5">O</div>
-    </div>
+    </div> -->
     <!-- <div class="relative">
         <div class="box">H</div>
         <div class="box">E</div>
@@ -64,11 +66,10 @@
         <div class="box">L</div>
         <div class="box">O</div>
     </div> -->
-    <br><br><br><br><br><br><br>
     <div class="absolute">
         <div class="box1">
             <div class="inner-box">
-                <div class="content-box">1</div>
+                <div class="content-box">9</div>
                 123 <br> 456 <br>
             </div>
         </div>
