--- a/KH_Front/css/day02/15_포지션 예제1.html
+++ b/KH_Front/css/day02/15_포지션 예제1.html
@@ -11,7 +11,8 @@
         body{height: 1500px;}
         #go-up{border: 1px solid black; border-radius: 50%; width: 50px; height: 50px;
             text-align: center; line-height: 50px; text-decoration: none;
-            position: fixed; bottom: 10px; right: 10px;}
+            position: fixed; bottom: 10px; right: 10px;} 
+            /* a태그를 감싸는 div 태그 등을 만들지 않아도, css를 통해 테두리를 만들어 버튼처럼 보이게 만들 수 있음.*/
     </style>
 
 </head>
