--- a/KH_Front/css/day02/20_float2.html
+++ b/KH_Front/css/day02/20_float2.html
@@ -7,11 +7,20 @@
     <style>
         /*float 속성을 사용하기 좋은 상황
         1. (inline이 아닌)요소들을 1열로 나열해야 할 때*/
-        .container1 span{border: 1px solid black;}
-        .container2{font-size: 0;} /* 엔터에 의한 공백을 지우기 위함.*/
+
+        /* inline 요소를 나란히 정렬하기 (당연히 됨...) */
+        .container1{font-size: 0; margin-bottom: 50px;}
+        .container1 span{border: 1px solid black; font-size: 14px;}
+
+        /* block요소를 inline-block 요소로 바꾸고 나란히 정렬함. (가능은 하지만 내용이 비어있는 블럭은 배열이 틀어짐,.. 근데 왜?... )*/
+        .container2{font-size: 0;} 
+        /* 엔터에 의한 공백을 지우기 위함.*/
         .container2 .ib{border: 1px solid black; display: inline-block;
                         width: 50px; height: 30px;
-                        font-size: 14px; /*엔터에 의한 공백을 지우기 위함*/}
+                        font-size: 14px; }
+                        /*엔터에 의한 공백을 지우기 위함*/
+        
+        /* float 속성을 이용해 block인 요소를 나란히 정렬함. */
         .container3 .fl{
             border: 1px solid black; height: 30px; width: 50px;
             float: left;
