--- a/KH_Front/html/day01/3_목록 태그.html
+++ b/KH_Front/html/day01/3_목록 태그.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. 순서가 있는 리스트, 시작 번호 설정 방법
+        2. 순서가 없는 리스트
+        3. 용어 정의 리스트
+        4. 마커 양식 변경
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>목록 태그</title>
