--- a/KH_Front/html/day01/5_영역 관련 태그.html
+++ b/KH_Front/html/day01/5_영역 관련 태그.html
@@ -9,12 +9,12 @@
     <!--영역을 나누는 태그
 
         div 태그: 기능은 없음
-        - 대표적인 block 태그. 
-        (새 라인에서 시작하는 태그. 크기 변경이 가능함 / table, div, p 태그 등)
+        - 대표적인 block(새 라인에서 시작하는 태그. 크기 변경이 가능함 / table, div, p 태그 등) 태그. 
+        
 
         span 태그: 기능은 없음
-        - 대표적인 inline 태그 
-        (현재 위치에서 시작하는 태그. 크기 변경이 안됨. / a, b, i태그 등)
+        - 대표적인 inline(현재 위치에서 시작하는 태그. 크기 변경이 안됨. / a, b, i태그 등)  태그
+        
 
         iframe 태그: 다른 문서들을 가져와서 배치하는 태그
         - 네이버 배너 광고, 유튜브 영상 첨부
