--- a/KH_Front/html/day01/7_하이퍼 링크 태그.html
+++ b/KH_Front/html/day01/7_하이퍼 링크 태그.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        a 태그 / href, target(4가지 값)
+        1. a 태그로 구현할 수 있는 기능(4가지)들 및 구현 방법
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>하이퍼 링크 태그</title>
 </head>
 <body>
     <!--
-        a태그: 다른 페이지, 같은 페이지 내에서 특정 위치로 이동하거나, 파일을 다운로드 하거나, 전화, 이메일 등을 전송할 때 사용
+        a태그: 다른 페이지 이동, 같은 페이지 내에서 특정 위치로 이동하거나, 파일을 다운로드 하거나, 전화, 이메일 등을 전송할 때 사용
         - href 속성: 이동할 위치. 태그 안 글자들에는 밑줄이 생김.
         (방문하기 전, 방문한 후, 클릭했을 때 등등 상태에 따라 글자 색이 다름)
         - target 속성: 이동할 때 어떤 창으로 띄울 것인지를 결정하는 속성
@@ -26,9 +30,9 @@
     <!--
         a 태그 다운로드: download 속성을 이용함
         - download="파일명"을 통해 저장할 때 파일명을 지정함
-        -href에는 다운로드 할 파일을 씀
+        -href="파일 경로"
     -->
-    <a href="" download="오디오.mp3">오디오 파일 다운로드</a><br><br>
+    <a href="<!--파일 경로-->" download="오디오.mp3">오디오 파일 다운로드</a><br><br>
 
     <!--
         a 태그: 전화나 메일 연결(href에, 전화는 tel, 메일은 mailto를 이용함) 
