--- a/KH_Front/css/day04/11_viewport예제.html
+++ b/KH_Front/css/day04/11_viewport예제.html
@@ -17,6 +17,12 @@
 </head>
 <body>
     <h1>뷰포트 적용 X</h1>
+    <!--
+        뷰포트: 화면의 크기에 따라 요소들의 크기를 반응형으로 조절하도록 함. (!+Enter 자동완성에서 자동으로 입력됨.)
+        - 적용시키지 않으면 요소의 최소크기보다 작은 화면에선 잘릴 수 있음.
+        - 개발자도구에서 모바일 환경으로 확인해보기.
+        - viewport 예제2와 함께 볼 것!
+     -->
     <img width="400px" src="https://i.namu.wiki/i/slmFMXb1Fchs2zN0ZGOzqfuPDvhRS-H9eBp7Gp613-DNKi6i6Ct7eFkTUpauqv5HAYR97mrNqrvvcCDEyBdL_g.webp">
 </body>
 </html>
