--- a/KH_Front/css/day04/2_애니메이션 예제.html
+++ b/KH_Front/css/day04/2_애니메이션 예제.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- 1. animation css 사이트에서 링크 가져오기 -->
+    <!-- 
+        1. animation css 사이트에서 링크 태그 복사해서 붙여넣기
+     -->
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -16,7 +18,7 @@
     <!-- 3. animate__animated 클래스 명 붙여넣기 -->
     <!-- 상세한 사용 방법이나 추가 속성값 지정을 하려면 
         사용법에 나와있는 클래스 명을붙여 넣기 함. -->
-    <h1 class="animate__bounce animate__animated animate__infinite">안녕하세요.</h1>
+    <h1 class="animate__animated animate__bounce animate__infinite">안녕하세요.</h1>
     
 </body>
 </html>
