--- a/KH_Front/css/day05/10_grid 예제.html
+++ b/KH_Front/css/day05/10_grid 예제.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. display:grid
+
+        2. grid-template-columns:
+        3. grid-template-rows:
+        (관련 함수 3가지+파라미터 4가지)
+
+        4.  grid-column-gap:
+        5. grid-row-gap:
+
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid 예제</title>
     <style>
-        /* 
+        /* 이용하려면 컨테이너에 display:grid를 설정해야함.
+
             grid-template-columns: 각 컬럼의 크기를 지정하는 속성
             - repeat(), minmax(), auto-fit, auto-fil을 이용해서 지정할 수 있음.
             - reapet(개수, 크기)
             - minmax(최소값, 최대값)
+
+             grid-template-rows: 각 로우의 크기를 지정하는 속성.
          */
 
         .container{
@@ -19,10 +33,10 @@
             /* grid-template-columns: 200px 200px 200px; */
 
             /* 요소들을 최소 200, 최대 1 프레임의 비율을 갖도록 알아서 배치함.
-                - auto-fit(반복 횟수) */
-            /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+                - auto-fit=반복 횟수 */
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             
-            grid-template-columns: repeat(3, 200px);
+            /* grid-template-columns: repeat(3, 200px); */
             grid-template-rows: repeat(3, 200px);
             /* 만들어진 grid는 9칸이나 콘텐츠는 6개 이므로, 아래에 3개 분량의 공백이 생김. */
             
