--- a/KH_Front/js/day01/13_화살표 함수.html
+++ b/KH_Front/js/day01/13_화살표 함수.html
@@ -19,7 +19,7 @@
         document.write(sum(1,2))
 
         //setInterval(함수, 시간): 일정 시간마다 주어진 작업을 수행함
-        serInterval(()=>{
+        setInterval(()=>{
             document.write(123)
         }, 1000)
         /*
