--- a/KH_Front/js/day01/1_입출력.html
+++ b/KH_Front/js/day01/1_입출력.html
@@ -6,18 +6,26 @@
     <title>js 입출력</title>
 </head>
 <body>
-    <!-- JS에서는 ;이 필수가 아님! 그러나 써주도록 하자. -->
-    <!-- JS를 사용하는 방법에는
+    <!-- 
+        JS에서는 ;이 필수가 아님! 그러나 써주도록 하자.
+
+        JS를 사용하는 방법에는
         1. body 태그에 코딩 후 script 태그 안에 그 기능을 정의하거나
         2. head 태그에서 외부 JS 파일을 불러오는 방법이 있음
     
         - JS는 처음 구동될 때 한 번 실행됨
         - 재시작하면 처음부터 실행됨
+
+        1. alert()
+        2. consol.log()
+        2. confirm()
+        3. prompt()
+        4. document.write()
     -->
     <script>
         // alert(변수 또는 문자열 등); : 매개변수를 알림창에 띄움
         // - 문자열: '', "", ``
-        // alert('안녕하세요');
+        alert('안녕하세요');
 
         // console.log(변수 또는 문자열 등);: 개발자 도구에서의 콘솔 창에 매개변수를 출력함
         console.log('안녕하세요', '만나서 반갑습니다');
