--- a/KH_Front/css/day03/14_transform 속성.html
+++ b/KH_Front/css/day03/14_transform 속성.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. transform:
+         - translate()
+         - scale()
+         - rotate()
+         - skew()
+
+        2. transform-origin:
+        3. transform-style:
+        4. backface-visibility:
+
+        5. perspective:
+        6. perspective-origin:
+
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transform 속성</title>
     <style>
 
-          /* 
+        /* 
         perspective: 3D 변환을 적용할 때, 원근 효과를 조절함. 
         - 값이 클 수록 더 멀리 있는 것처럼 보이고, 작을 수록 가까이 있는 것 처럼 보임.
         - 3D 변환을 적용할 때, 원근 효과를 조절하기 위해 사용하는 속성
@@ -29,14 +44,15 @@
         - 함수:
             - translate() : 요소를 이동시킴
             - scale() : 요소의 크기를 변경시킴(배수)
-            - rotate() : 요소를 회전시킴
-            - skew() : 요소의 크기와 모양을 변형시킴 (실제 요소 크기와 모양이 변경됨.)
+            - rotate() : 요소를 회전시킴, 각도(deg)단위로 변경
+            - skew() : 요소의 크기와 모양을 변형시킴 (실제 요소 크기와 모양이 변경됨.), 각도(deg)단위로 변경
 
         transform-origin: transform 속성을 이용하여 요소를 변경할 때 기준점을 설정하는 속성
 
-        transform-style: 부모 요소에 적용한 변형을 하위 요소에 적용하는 속성함
+        transform-style: 부모 요소에 적용한 변형을 하위 요소에 적용하는 속성
             - flat 하위 요소를 평면으로 처리
-            - preserve-3D 하위요소들이 3D 효과를 적용함
+            - preserve-3D 하위요소들에 3D 효과를 적용함
+            - transform-style 속성 예제 참고하기...
 
         backface-visibility: 회전하여 뒷면이 보일 경우, 보이게 할 것인지 여부를 설정함 
         */
