--- a/KH_Front/css/day03/16_transform style 속성 예제.html
+++ b/KH_Front/css/day03/16_transform style 속성 예제.html
@@ -5,25 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transform style</title>
     <style>
-        .container1,
-        .container2 {
+        .container1, .container2 {
             display: inline-block;
             border: 10px solid #aaa;
             transform: perspective(500px) rotateY(-60deg);
         }
-
-        .container1 .box,
-        .container2 .box  {
+        .container1 .box, .container2 .box {
             width: 100px;
             height: 100px;
             background-color: yellow;
-            /* transform-style: flat; */
             transform: perspective(500px) rotateY(60deg);
         }
-
-        .container2 {transform-style: preserve-3d;}
-
-       
+        /* 아래 코드를 주석처리하며 변화 보기... 아무튼 뭔가 바뀜 */
+        .container2 {  transform-style: preserve-3d; }
     </style>
 </head>
 <body>
