--- a/KH_Front/css/day03/9_테이블 관련 속성.html
+++ b/KH_Front/css/day03/9_테이블 관련 속성.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. caption-side
+
+        2. border-collapse(2가지)
+
+        3. border-spacing
+
+        4. table-layout(2가지)
+
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,10 +19,10 @@
         caption-side
         - 캡션 위치 선택 
         border-collapse
-        - td 태그에 테두리를 지정하면 각각 테두리가 생겨 테두리 상이에 공백이 생기는데,
-          합쳐서 하나로 표시할지 두개로 표시할지 결정하는 속성
+        - td 태그에 테두리를 지정하면 각각 테두리가 생기고, 칸 사이에 공백이 생기는데,
+          합쳐서 하나로 표시할지 두줄로 표시할지 결정하는 속성
         border-spacing
-        - border-collapse가 seperate일 때, 테두리 상이에 여백 크기를 지정하는 속성
+        - border-collapse가 seperate일 때, 칸 사이에 여백 크기를 지정하는 속성
         table-layout
         - 요소의 내용이 길어지는 경우 요소의 크기가 내용에 비례해서 커지게 할건지
         말건지를 정하게하는 속성
@@ -20,7 +30,7 @@
         table{
             caption-side: bottom;
             width: 100%; border: 1px solid black;
-            border-collapse: separate; border-spacing: 20px 10px;
+            border-collapse: separate;  border-spacing: 20px 10px;
             vertical-align: bottom;
             table-layout: fixed;
         }
@@ -28,8 +38,10 @@
         tr>th:first-of-type{
             width: 40px;
         }
-        tr>td:nth-of-type(2){white-space: nowrap; overflow: hidden;
-        text-overflow: ellipsis;}
+        tr>td:nth-of-type(2){
+            white-space: nowrap; overflow: hidden;
+            text-overflow: ellipsis;
+        }
     </style>
 </head>
 <body>
