--- a/KH_Front/css/day04/10_서브메뉴 예제.html
+++ b/KH_Front/css/day04/10_서브메뉴 예제.html
@@ -17,9 +17,10 @@
             float: left; 
             line-height: 50px; font-size: 24px; font-weight: bold;
             width: 33.33%; box-sizing: border-box;
-            position: relative;
+            /* position: relative; */
         }
         .menu-item~.menu-item{
+            /* border의 두께 만큼 왼쪽으로 당김. (테두리는 겹쳐지지 않기 때문에 중간이 끝보다 2배 두꺼워짐) */
             margin-left: -3px;
         }
         .menu-item:last-of-type{
