--- a/KH_Front/css/day04/13_반응형 예제.html
+++ b/KH_Front/css/day04/13_반응형 예제.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. 반응형 설정하기 (@media)
+        - 조건 설정하기
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>반응형 예제</title>
