--- a/KH_Front/css/day04/14_부트스트랩 예제.html
+++ b/KH_Front/css/day04/14_부트스트랩 예제.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>부트스트랩 예제</title>
+    <title>부트스트랩 예제</title> 
+  <!-- 
+  - 3SSchool의 Bootstrap B5버전
+  - 다른 버전의 Bootstrap을 사용할 경우 호환성 문제가 발생할 수 있으므로 팀으로 진행할 때는 버전을 통일해야함.
+  - 버전 선택 > Get Started > Botstrap CDN에서 코드 복사 
+  -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .submit{margin: 0 50%;}
+       
     </style>
 </head>
 <body>
