--- a/KH_Front/css/day04/8_다단 예제.html
+++ b/KH_Front/css/day04/8_다단 예제.html
@@ -9,7 +9,8 @@
 
         /* span 태그, background-color를 이용하기 */
         .container>*{
-            float: left; /* 엔터에 의한 공백을 없애기 위함.*/
+            /* 엔터에 의한 공백을 없애기 위함.*/
+            float: left; 
             line-height: 20px; font-size: 14px;
             color: black; text-decoration: none;
         } 
