--- a/KH_Front/css/day05/11_grid 예제2.html
+++ b/KH_Front/css/day05/11_grid 예제2.html
@@ -7,6 +7,12 @@
     <style>
         /* 
             gird 칸 합치기
+            (아래 코드 사용법 정확하게 인지하기!)
+
+            1. grid-column-start: / grid-row-start:
+            2. grid-column-end: / grid-row-end:
+
+            3. grid-row / grid-column
          */
 
         .container{
@@ -18,8 +24,10 @@
         .box{border: 3px solid red;}
 
         .box:first-of-type{
+             /* grid-column: 1/3; 아래 코드와 동일하게 동작함*/
             grid-column-start: 1;
             grid-column-end: 3;
+           
             grid-row-start: 1;
             background-color: yellow;
         }
