--- a/KH_Front/css/day05/12_grid 예제3.html
+++ b/KH_Front/css/day05/12_grid 예제3.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        1. grid-template-areas
+        2. grid-areaww
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid 예제3</title>
@@ -24,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div class="container">.
+    <div class="container">
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
