--- a/KH_Front/css/day05/1_회원가입 예제.html
+++ b/KH_Front/css/day05/1_회원가입 예제.html
@@ -6,7 +6,7 @@
     <title>회원가입 예제</title>
     <style>
         /* html 시험 관련 예제! */
-        /* 제목 붙이려면 legend 태그를 이용하기 */
+        /* 제목 붙이려면 fieldset, legend 태그를 이용하기 */
         /* .container{border: 1px solid black; padding: 20px 10px 10px;} */
         .labels{font-weight: 1000; float: left; width: 110px; font-size: 17px;}
         [class^=lb]{margin-bottom: 10px;}
