--- a/KH_Front/js/day01/11_예제4.html
+++ b/KH_Front/js/day01/11_예제4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>예제4</title>
+    <title>함수 선언 예제</title>
 </head>
 <body>
     <!-- 두 수를 더하는 함수를 만들고, 호출해서 화면에 테스트하는 예제 
