--- a/KH_Front/js/day01/6_예제1.html
+++ b/KH_Front/js/day01/6_예제1.html
@@ -9,6 +9,9 @@
     <script>
         var age = prompt("당신의 나이는?", 0)
         document.write(`입력받은 나이는 ${age??0}살 입니다.`)
+
+        // document.write(`입력받은 나이는 ${prompt("당신의 나이는?", 0)??0}살 입니다.`)
+
     </script>   
 </body>
 </html>		
