--- a/KH_Front/js/day01/4_문자열.html
+++ b/KH_Front/js/day01/4_문자열.html
@@ -13,7 +13,7 @@
     1. number: 숫자형 (정수, 실수 구분하지 않음)
     2. string: 문자열 ('', "", ``)
     3. boolean: 논리값
-    4. ubdefined: 값이 초기화 되지 않음
+    4. undefined: 값이 초기화 되지 않음
     5. null: 할당된 값이 유효하지 않음
     6. object: 배열, 객체, 함수 등
     7. symbol: 고유하고 변경 불가능한 값. ES6에서 도입.
