--- a/KH_Front/js/day02/8_요소 선택.html
+++ b/KH_Front/js/day02/8_요소 선택.html
@@ -21,9 +21,11 @@
 	</nav>
 	<script>
 		/* 
-		getElementById: 요소 혹은 null 리턴
-		getElementsByClassName, getElementsByTagName: 배열 리턴
-		querySelector: NodeList 리턴
+		getElementById(): 요소 혹은 null 리턴
+		getElementsByClassName(), getElementsByTagName(): 배열 리턴
+		querySelector(): NodeList 리턴, () 안에는 선택자가 들어갈 수 있음.
+
+		
 		*/
 
 		let nav = document.getElementById('nav')
