--- a/KH_Front/js/day03/2_클릭 이벤트 예제2.html
+++ b/KH_Front/js/day03/2_클릭 이벤트 예제2.html
@@ -17,10 +17,10 @@
 		let btn = document.getElementById('btn')
 		let input = document.getElementById('input')
 
-		// btn.onclick= function(){
-		// 	let text = input.value
-		// 	alert(text)
-		// }
+		btn.onclick= function(){
+			let text = input.value
+			alert(text)
+		}
 
 		// btn.onclick = ()=>{
 		// 	let text = input.value
