--- a/KH_Front/js/JQuery/day06/1_1JQuery 효과.html
+++ b/KH_Front/js/JQuery/day06/1_1JQuery 효과.html
@@ -49,13 +49,13 @@
 		$(".btn-show").click(function(){
 			$("#show").fadeIn(2000)
 		})
-		$("btn-hide").click(function(){
+		$(".btn-hide").click(function(){
 			$("#show").fadeOut(2000)
 		})
-		$("btn-toggle").click(function(){
+		$(".btn-toggle").click(function(){
 			$("#show").fadeTo(2000, 0.5)
 		})
-		$("btn-toggle").click(function(){
+		$(".btn-toggle").click(function(){
 			$("#show").fadeToggle(2000)
 		})
 	</script>
