--- a/KH_Front/css/day03/8_다단 관련 속성.html
+++ b/KH_Front/css/day03/8_다단 관련 속성.html
@@ -8,7 +8,7 @@
         .container{
             /* colum-count: 단의 개수를 지정하여 다단을 나눔 
                 (갯수를 지정하지 않으면 너비를 기준으로 단을 나눔) */
-            /* column-count: 2; */
+            column-count: 2;
             column-width:  300px;
 
             /* column-gap: 다단 사이의 여백 설정 */
