--- a/KH_Front/css/day03/9_테이블 관련 속성.html
+++ b/KH_Front/css/day03/9_테이블 관련 속성.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- 
-        1. caption-side
+        1. caption-side(2가지)
 
         2. border-collapse(2가지)
 
@@ -10,6 +10,7 @@
 
         4. table-layout(2가지)
 
+        5. 테이블 너비 설정 방법: 한 칸의 높이/너비를 지정하면 수직/수평으로 있는 다른 칸의 높이/너비에도 영향을 줌!
      -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
