--- a/KH_Front/css/day04/4_overflow.html
+++ b/KH_Front/css/day04/4_overflow.html
@@ -5,6 +5,8 @@
         1. overflow (4가지 속성값, 각각의 특징)
 
         2. 스크롤바 안보이게 하는 방법(브라우저 별로 다르다!)
+
+        텍스트 넘침 예제: css/day02/6_text-overflow
      -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
