--- a/KH_Front/js/day02/5_location 객체.html
+++ b/KH_Front/js/day02/5_location 객체.html
@@ -6,7 +6,7 @@
 	<title>location 객체</title>
 </head>
 <body>
-	<button onclick="writeBoard()">글쓰기</ㅠ>
+	<button onclick="writeBoard()">글쓰기</button>
 	<script>
 		function writeBoard(){
 			if(confirm('게시글 등록은 로그인이 필요한 서비스 입니다.\n 로그인 하겠습니까?')){
