--- a/KH_Front/js/day02/6_익명 객체.html
+++ b/KH_Front/js/day02/6_익명 객체.html
@@ -16,6 +16,12 @@
 		
 		*/
 		let prop = prompt('속성명을 입력하세요')
+		// 익명함수
+		// 먼저 정의되어야함. (호이스팅 x)
+		let user1 = {
+			name: '홍길동', age: 21,
+			[prop] : 100 // 속성명을 변수에서 가져옴
+		};
 
 
 		// 객체에 변수 추가하기
@@ -39,11 +45,7 @@
 		}
 
 
-		// 익명함수
-		let user1 = {
-			name: '홍길동', age: 21,
-			[prop] : 100 // 속성명을 변수에서 가져옴
-		};
+		
 	</script>
 </body>
 </html>
