--- a/KH_Front/js/day02/9_요소 선택 2.html
+++ b/KH_Front/js/day02/9_요소 선택 2.html
@@ -19,8 +19,9 @@
 			</li>
 		</ul>
 	</nav>
+	<!-- ====================================================================================== -->
 	<script>
-		/* getElementxxx와 querySelectorxxx의 비교 
+		/* getElementxxx와 querySelectoryxxx의 비교 
 		getElementxxx
 		- 요소가 나중에 추가되어도 검색이 가능함
 		querySelectorxxx
@@ -31,6 +32,7 @@
 		let links2 = document.querySelectorAll('.menu-link')
 		console.log(`querySelectorAll: ${links2.length}`)
 	</script>
+	<!-- ====================================================================================== -->
 	<nav id="nav2">
 		<ul class="menu-list">
 			<li class="menu-item">
