--- a/KH_Front/css/day02/3_줄바꿈 처리 속성.html
+++ b/KH_Front/css/day02/3_줄바꿈 처리 속성.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공백 처리 속성</title>
+    <title>줄바꿈 처리 속성</title>
     <style>
         [class^=box]{ width: 200px; border: 1px solid black; font-size: 20px;}
         .box1{white-space: normal;} /* 기본값 */
