--- a/KH_Front/css/day03/6_background 관련 속성.html
+++ b/KH_Front/css/day03/6_background 관련 속성.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>background 관련 속성</title>
     <style>
+        /* 
+        1. background-color
+        2. background-clip (3가지 속성값)
+        3. background-image (전용 속성함수)
+        4. background-repeat (3가지 속성값)
+        5. background-size (3가지 속성값)
+        6. background-position (위치 조정 방법)
+        7. background-origin (3가지 속성값)
+        8. background-attachment (2가지 속성값)
+        */
+
         [class^=box]{ width: 300px; height: 300px; padding: 50px;}
         .box1{
             border: 20px solid transparent;
