--- a/KH_Front/css/day04/13_반응형 예제.html
+++ b/KH_Front/css/day04/13_반응형 예제.html
@@ -12,10 +12,10 @@
         body{margin: 0}
         .box{width: 100%; height: 500px; background-color: blue; margin: 0 auto;}
        
-        @media screen and (min-width: 1100px){ /*최소 너비가 1100px 이상인 경우 박스의 너비를 1100px로 한정함.*/
+        @media screen and (min-width: 1100px){ /*너비가 1100px 이상인 경우 박스의 너비를 1100px로 한정함.*/
             .box{width: 1100px;}
         }
-        @media screen and (min-width: 600px) and (max-width:1100px){ /*최소 너비가 600px 이상, 1100px 미만인 경우 박스의 너비를 1100px로 한정함.*/
+        @media screen and (min-width: 600px) and (max-width:1100px){ /*너비가 600px 이상, 1100px 미만인 경우 박스의 너비를 1100px로 한정함.*/
             .box{width: 580px; background-color: aqua;}
         }
     </style>
