--- a/KH_Front/css/day04/9_배경 예제.html
+++ b/KH_Front/css/day04/9_배경 예제.html
@@ -7,7 +7,10 @@
     <style>
         .background{
             position: fixed; 
-            /* 높이와 너비를 대신할 수 있음.*/
+            /* 
+            높이와 너비를 대신할 수 있음.
+            position 예제는 css/day02/14_position 에서 확인 가능.
+            */
             top: 0; bottom: 0; 
             left: 0; right: 0;
 
